feat: added Icon & Typography components. Added mixins & typography variables

--- a/src/stylesheets/variables.scss
+++ b/src/stylesheets/variables.scss
@@ -19,3 +19,26 @@ $Blue: #4EA8DE;
 
 $PurpleDark: #5E60CE;
 $Purple: #8284FA;
+
+/**
+* Размеры Типографики
+**/
+
+/* Переменные жирности шрифта */
+$black: 900;
+$bold: 700;
+$regular: 400;
+
+/* Переменные размеров шрифта  */
+$xl-font-size: 40px;
+$l-font-size: 16px;
+$m-font-size: 14px;
+$s-font-size: 12px;
+
+/* Переменные высоты строки */
+
+$l-line-height: 140%;
+$m-line-height: 121%;
+
+/** Курсор */
+$cursor: pointer;
