--- a/src/index.scss
+++ b/src/index.scss
@@ -5,7 +5,7 @@
 :root {
   font-family: 'Inter', sans-serif;
   font-weight: 400;
-  color: $Gray-300;
+  color: $gray-300;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -19,5 +19,5 @@ body {
   width: 100%;
   min-height: 100vh;
 
-  background-color: $Gray-600;
+  background-color: $gray-600;
 }
