--- a/src/stylesheets/variables.scss
+++ b/src/stylesheets/variables.scss
@@ -6,19 +6,19 @@ $min-content-width: 320px;
 * Цветовая схема приложения
 **/
 
-$Gray-700: #0D0D0D;
-$Gray-600: #1A1A1A;
-$Gray-500: #262626;
-$Grey-400: #333333;
-$Gray-300: #808080;
-$Gray-200: #D9D9D9;
-$Gray-100: #F2F2F2;
+$gray-700: #0D0D0D;
+$gray-600: #1A1A1A;
+$gray-500: #262626;
+$gray-400: #333333;
+$gray-300: #808080;
+$gray-200: #D9D9D9;
+$gray-100: #F2F2F2;
 
-$Blue-Dark: #1E6F9F;
-$Blue: #4EA8DE;
+$blue-Dark: #1E6F9F;
+$blue: #4EA8DE;
 
-$PurpleDark: #5E60CE;
-$Purple: #8284FA;
+$purpleDark: #5E60CE;
+$purple: #8284FA;
 
 /**
 * Размеры Типографики
