--- a/src/components/form/form.module.scss
+++ b/src/components/form/form.module.scss
@@ -1,5 +1,5 @@
-@use '../../../stylesheets/variables.scss' as *;
-@use '../../../stylesheets/mixins' as *;
+@use '../../stylesheets/variables.scss' as *;
+@use '../../stylesheets/mixins' as *;
 
 
 .form {
