--- a/src/components/task/task.module.scss
+++ b/src/components/task/task.module.scss
@@ -2,7 +2,7 @@
 @use '../../stylesheets/mixins' as *;
 
 .task__wrapper {
-  @include flex(row, center, center, 12px);
+  @include flex(row, space-between, center, 12px);
   width: 736px;
   background: $gray-400;
   border-radius: 8px;
@@ -16,6 +16,12 @@
 
 .title {
   text-align: start;
+  transition: color .3s ease-in-out;
+}
+
+.title__checked {
+  text-decoration: line-through;
+  color: $gray-300;
 }
 
 .icon {
