--- a/src/index.scss
+++ b/src/index.scss
@@ -22,3 +22,21 @@ body {
 
   background-color: $gray-400;
 }
+
+::-webkit-scrollbar-track {
+  background-color: var(--Gradation-200);
+}
+
+::-webkit-scrollbar-thumb {
+  -webkit-border-radius: 2px;
+  border-radius: 2px;
+  background-color: $gray-300;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: $gray-300;
+}
+
+::-webkit-scrollbar {
+  width: 5px;
+}
