--- a/src/stylesheets/variables.scss
+++ b/src/stylesheets/variables.scss
@@ -15,10 +15,15 @@ $gray-200: #D9D9D9;
 $gray-100: #F2F2F2;
 
 $blue-Dark: #1E6F9F;
+$blue-Light: #6cb1d9;
 $blue: #4EA8DE;
+
 
 $purpleDark: #5E60CE;
 $purple: #8284FA;
+$purple-Light: #2c2e60;
+
+$red: #e90d0d;
 
 /**
 * Размеры Типографики
