feat: added filter, sortingPicker, filterPicker, menu, menuItems components. added logic sorting & filters

--- a/src/components/ui/buttons/buttonIconText/buttonIconText.module.scss
+++ b/src/components/ui/buttons/buttonIconText/buttonIconText.module.scss
@@ -3,5 +3,5 @@
 
 .button {
   @include button-style-reset;
-  @include flex(row, sp, center, 8px);
+  @include flex(row, space-between, center, 8px);
 }
