--- a/src/index.scss
+++ b/src/index.scss
@@ -24,7 +24,7 @@ body {
 }
 
 ::-webkit-scrollbar-track {
-  background-color: var(--Gradation-200);
+  background-color: $gray-200;
 }
 
 ::-webkit-scrollbar-thumb {
