--- a/src/components/pickers/sortingPicker/sortingPicker.module.scss
+++ b/src/components/pickers/sortingPicker/sortingPicker.module.scss
@@ -1,5 +1,5 @@
-@use '../../stylesheets/variables.scss' as *;
-@use '../../stylesheets/mixins' as *;
+@use '../../../stylesheets/variables.scss' as *;
+@use '../../../stylesheets/mixins' as *;
 
 .sorter {
   @include flex(row, center, center, 8px);
