--- a/src/components/task/task.module.scss
+++ b/src/components/task/task.module.scss
@@ -3,7 +3,7 @@
 
 .task__wrapper {
   @include flex(row, space-between, center);
-  width: 736px;
+  width: 776px;
   background: $gray-400;
   border-radius: 8px;
   padding: 16px;
@@ -14,7 +14,17 @@
   }
 }
 
+.buttons {
+  @include flex(row, space-between, center, 8px);
+  padding-right: 6px;
+}
+
 .icon {
   @include size(24px, 24px);
   color: $gray-300;
+  transition: color .2s ease-in-out;
+
+  &:hover {
+    color: $gray-100;
+  }
 }
