fixbugs: form, radio buttons, sorting Picker

--- a/src/components/pickers/sortingPicker/sortingPicker.module.scss
+++ b/src/components/pickers/sortingPicker/sortingPicker.module.scss
@@ -2,7 +2,8 @@
 @use '../../../stylesheets/mixins' as *;
 
 .sorter {
-  @include flex(row, center, center, 8px);
+  @include flex(row, end, center, 8px);
+  width: 172px;
 }
 
 .icon {
